--- a/cli/package.json
+++ b/cli/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.1676.0",
     "commander": "^12.1.0",
     "constructs": "^10.3.0",
+    "dotenv": "^16.4.5",
     "inquirer": "^10.1.8"
   },
   "devDependencies": {
