--- a/cdk/tsconfig.json
+++ b/cdk/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
+    "target": "ES2022",
+    "module": "ES2022",
+    "moduleResolution": "Node",
+    "esModuleInterop": true,
     "lib": [
-      "es2020",
+      "ES2022",
       "dom"
     ],
     "declaration": true,
@@ -23,6 +25,10 @@
     "typeRoots": [
       "./node_modules/@types"
     ]
+  },
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node",
   },
   "exclude": [
     "node_modules",
